--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ out/
 
 # Gradle 
 .gradle
+gradle
 build
 
 # Mobile Tools for Java (J2ME)
@@ -14,6 +15,9 @@ build
 *.jar
 *.war
 *.ear
+*.ipr
+*.iws
+*.iml
 
 # User-specific stuff:
 .idea/workspace.xml
@@ -22,6 +26,7 @@ build
 .idea/vcs.xml
 .idea/misc.xml
 .idea/jsLibraryMappings.xml
+.idea
 
 # File-based project format:
 *.iws
